@@ -413,10 +413,8 @@ sub set_option {
                 # Emit the changed-current-scan-options signal
                 # unless we are actively setting it
                 if ( not $self->{setting_current_scan_options} ) {
-                    $self->signal_emit(
-                        'changed-current-scan-options',
-                        $self->get('current-scan-options')
-                    );
+                    $self->signal_emit( 'changed-current-scan-options',
+                        $self->get('current-scan-options'), $EMPTY );
                 }
             }
 
