@@ -12,6 +12,7 @@
 * Fixed crash with scanimage frontend due to empty cache
 * Ghost save button, rather than hiding save dialogue if all pages removed.
   Closes bug #253 (Save dialoque does not stay open)
+* Fixed bug causing profile dropdown to be cleared after setting profile
 
 
 1.8.6 (22.08.2017):
